--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "a11y:predictable": "python3 scripts/check-predictable.py",
     "a11y:input-assistance": "python3 scripts/check-input-assistance.py",
     "a11y:compatible": "python3 scripts/check-compatible.py",
-    "a11y": "yarn a11y:contrast && yarn a11y:text-alternatives && yarn a11y:media && yarn a11y:semantic && yarn a11y:distinguishable && yarn a11y:keyboard && yarn a11y:enough-time && yarn a11y:seizures && yarn a11y:navigable && yarn a11y:input-modalities && yarn a11y:readable && yarn a11y:predictable && yarn a11y:input-assistance && yarn a11y:compatible",
+    "a11y:autocomplete": "python3 scripts/check-autocomplete.py",
+    "a11y": "yarn a11y:contrast && yarn a11y:text-alternatives && yarn a11y:media && yarn a11y:semantic && yarn a11y:distinguishable && yarn a11y:keyboard && yarn a11y:enough-time && yarn a11y:seizures && yarn a11y:navigable && yarn a11y:input-modalities && yarn a11y:readable && yarn a11y:predictable && yarn a11y:input-assistance && yarn a11y:compatible && yarn a11y:autocomplete",
     "perf:images": "python3 scripts/check-image-optimization.py",
     "perf:images:optimize": "./scripts/run-python.sh optimize-images.py",
     "perf:mobile": "python3 scripts/check-mobile-performance.py",
