--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "seo:schema": "scripts/.venv/bin/python scripts/validate-structured-data.py",
     "seo:links": "scripts/.venv/bin/python scripts/check-internal-links.py",
     "seo": "yarn seo:validate && yarn seo:schema && yarn seo:links",
+    "validate:ogimages": "scripts/.venv/bin/python scripts/validate-og-images.py",
     "lighthouse:desktop:ci": "lhci collect --config=.lighthouserc.ci.js && lhci upload --config=.lighthouserc.ci.js --target=filesystem --outputDir=./lighthouse-desktop && node scripts/process-lhci-results.js --manifestDir=lighthouse-desktop --outputJson=lighthouse-results.json --outputHtml=lighthouse-desktop.html --targetUrl=${LIGHTHOUSE_URL:-http://localhost:3000/} && lhci assert --config=.lighthouserc.ci.js",
     "lighthouse:mobile:ci": "lhci collect --config=lighthouse.mobile.config.ci.js && lhci upload --config=lighthouse.mobile.config.ci.js --target=filesystem --outputDir=./lighthouse-mobile && node scripts/process-lhci-results.js --manifestDir=lighthouse-mobile --outputJson=lighthouse-mobile-results.json --outputHtml=lighthouse-mobile.html --targetUrl=${LIGHTHOUSE_URL:-http://localhost:3000/} && lhci assert --config=lighthouse.mobile.config.ci.js",
     "lighthouse:desktop": "rm -rf .lighthouse lighthouse-desktop && lhci collect --config=.lighthouserc.js && lhci upload --config=.lighthouserc.js --target=filesystem --outputDir=./lighthouse-desktop && node scripts/process-lhci-results.js --manifestDir=lighthouse-desktop --outputJson=lighthouse-results.json --outputHtml=lighthouse-desktop.html --targetUrl=${LIGHTHOUSE_URL:-http://localhost:3000/} && lhci assert --config=.lighthouserc.js",
     "lighthouse:mobile": "rm -rf .lighthouse .lighthouse-mobile lighthouse-mobile && lhci collect --config=lighthouse.mobile.config.js && lhci upload --config=lighthouse.mobile.config.js --target=filesystem --outputDir=./lighthouse-mobile && node scripts/process-lhci-results.js --manifestDir=lighthouse-mobile --outputJson=lighthouse-mobile-results.json --outputHtml=lighthouse-mobile.html --targetUrl=${LIGHTHOUSE_URL:-http://localhost:3000/} && lhci assert --config=lighthouse.mobile.config.js",
     "lighthouse": "yarn lighthouse:desktop && yarn lighthouse:mobile",
-    "check:all": "yarn build && yarn format && yarn lint && yarn a11y && yarn perf && yarn seo"
+    "check:all": "yarn build && yarn format && yarn lint && yarn a11y && yarn perf && yarn seo && yarn validate:ogimages"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
