--- a/.github/workflows/tests-and-other-validation.yml
+++ b/.github/workflows/tests-and-other-validation.yml
@@ -10,13 +10,9 @@ on:
       - synchronize
       - ready_for_review
 jobs:
-  verify:
-    name: Verify the Cennso Website code
-    defaults:
-      run:
-        working-directory: ./
-    runs-on:
-      - ubuntu-22.04
+  setup:
+    name: Build project
+    runs-on: ubuntu-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -37,7 +33,71 @@ jobs:
           python -m venv scripts/.venv
           scripts/.venv/bin/python -m pip install --upgrade pip
           scripts/.venv/bin/pip install -r scripts/requirements.txt
-      - name: Run all quality checks
-        run: yarn check:all
+      - name: Build project
+        run: yarn build
+      - name: Cache build artifacts
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            .next
+            node_modules
+            scripts/.venv
+          key: build-${{ github.sha }}
+  
+  quality-checks:
+    name: ${{ matrix.check }}
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        check:
+          - format
+          - lint
+          - a11y
+          - perf
+          - seo
+          - validate:ogimages
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up NodeJS
+        uses: actions/setup-node@v4
+      - name: Install Yarn
+        run: |-
+          npm install -g yarn
+          yarn -v
+      - name: Restore build artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            .next
+            node_modules
+            scripts/.venv
+          key: build-${{ github.sha }}
+      - name: Run ${{ matrix.check }}
+        run: yarn ${{ matrix.check }}
+  
+  tests:
+    name: Run tests
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up NodeJS
+        uses: actions/setup-node@v4
+      - name: Install Yarn
+        run: |-
+          npm install -g yarn
+          yarn -v
+      - name: Restore build artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            .next
+            node_modules
+            scripts/.venv
+          key: build-${{ github.sha }}
       - name: Run tests
         run: yarn test
