--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,12 @@ next-env.d.ts
 /public/feeds
 .DS_Store
 
+# LLM data artifacts (generated during build)
+# Generated files
+/public/llm.txt
+/public/llm-full.txt
+/public/footer-data.json
+
 # Python virtual environment
 /scripts/.venv
 /scripts/__pycache__
