--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "generate:ogimages": "tsx scripts/generate-og-images/index.tsx",
     "generate:llm": "node --import tsx scripts/generate-llm-data/index.ts",
-    "generate:footer": "tsx scripts/generate-footer-data.ts",
-    "prebuild": "yarn generate:ogimages && yarn generate:llm && yarn generate:footer",
+    "prebuild": "yarn generate:ogimages && yarn generate:llm",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
