feat: enable generation of llm files and expose the in footer (#183)

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,11 @@ next-env.d.ts
 /public/feeds
 .DS_Store
 
+# LLM data artifacts (generated during build)
+# Generated files
+/public/llm.txt
+/public/llm-full.txt
+
 # Python virtual environment
 /scripts/.venv
 /scripts/__pycache__
