--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "generate:ogimages": "tsx scripts/generate-og-images/index.tsx",
-    "prebuild": "yarn generate:ogimages",
+    "generate:llm": "node --import tsx scripts/generate-llm-data/index.ts",
+    "prebuild": "yarn generate:ogimages && yarn generate:llm",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
