--- a/.github/workflows/monthly-analytics-dump.yml
+++ b/.github/workflows/monthly-analytics-dump.yml
@@ -62,7 +62,7 @@ jobs:
 
               // Create a streaming gzip upload
               const { url, writable } = await put(archiveKey, null, {
-                access: "public",
+                access: "private",
                 contentType: "application/gzip",
               });
 
