--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "2.0.0",
     "daisyui": "^4.10.1",
     "github-slugger": "^2.0.0",
     "image-size": "^1.1.1",
@@ -93,7 +94,7 @@
     "@types/react": "18.2.78",
     "@types/react-dom": "18.2.18",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@vercel/node": "^5.5.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
